# scoring_api

./: Dockerfile  Dockerfile_test  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: testing.yaml
scoring_api/: main.py
scoring_api/api/: api.py  handler.py  scoring.py  server.py  store.py
tests/: conftest.py  test.py  test_test.py
tests/integration/: conftest.py  test_clients_interests.py  test_key_value_storage.py  test_method.py  test_online_score.py
tests/integration/fixtures/: __init__.py  auth_invalid_requests.json  clients_interests_invalid_requests.json  clients_interests_valid_requests.json  method_invalid_requests.json  online_score_invalid_requests.json  online_score_valid_requests.json
tests/unit/: test_field.py  test_requests_fields.py  test_requests_schemas.py  test_schema.py  test_store.py
